# beautiful-rutherford

./: CMakeLists.txt  README.md  aether.desktop  db.json  project_tree.txt
archive-web-version/: aether.desktop  package-lock.json  package.json
archive-web-version/backend/: db.js  generate_mock.js  mpris.js  package-lock.json  package.json  run_scan.js  scanner.js  server.js
archive-web-version/frontend/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
qml/: AlbumGrid.qml  AlbumModal.qml  ArtistList.qml  CollectionGrid.qml  GenreGrid.qml  LyricsVisualizer.qml  Main.qml  PlayerBar.qml  Sidebar.qml
scratch/: tagger  tagger.cpp
src/: database.cpp  database.h  main.cpp  mpris.cpp  mpris.h  player.cpp  player.h  scanner.cpp  scanner.h
